Add --enable-preview flag